test: Add and Modify ScheduleRestController Unit Test #58